--- a/twitch-points-extension.html
+++ b/twitch-points-extension.html
@@ -1,5 +1,8 @@
 <html lang="en">
     <body>
         Twitch Points Extension
+        <div>
+            Current points saved:
+        </div>
     </body>
 </html>
