Replaced getting channel name with promise

--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -1,10 +1,13 @@
 <html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
+    </head>
     <body>
-        <div class="title">
-            Twitch Points Extension
-        </div>
-        <div class="points">
-            <div class="points-title">Current points saved:</div>
+        <div class="container">
+            <div class="title">Twitch Points Extension</div>
+            <div class="points">
+                <div class="points-title">Current points saved:</div>
+            </div>
         </div>
     </body>
 </html>
