--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -1,12 +1,14 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
+        <script src="popup.js"></script>
     </head>
     <body>
         <div class="container">
             <div class="title">Twitch Points Extension</div>
             <div class="points">
                 <div class="points-title">Current points saved:</div>
+                <div class="points-values"></div>
             </div>
         </div>
     </body>
