--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -5,11 +5,8 @@
     </head>
     <body>
         <div class="container">
-            <div class="title">Twitch Points Extension</div>
-            <div class="points">
-                <div class="points-title">Current points saved:</div>
-                <div class="points-values"></div>
-            </div>
+            <h1>Twitch Points Extension</h1>
+            <table class="points-values"></table>
         </div>
     </body>
 </html>
