--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -6,6 +6,7 @@
     <body>
         <div class="container">
             <h1>Twitch Points Extension</h1>
+            <h4>With &#128151; to Hania</h4>
             <table class="points-values"></table>
         </div>
     </body>
