Added clear points button

--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
         <script src="popup.js"></script>
     </head>
@@ -7,6 +8,7 @@
         <div class="container">
             <h1>Twitch Points Extension</h1>
             <h4>With &#128151; to Hania</h4>
+            <div id="result"></div>
             <table class="points-values"></table>
         </div>
     </body>
