--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -2,6 +2,7 @@
     <head>
         <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
+        <script src="van.js"></script>
         <script src="popup.js"></script>
     </head>
     <body>
