--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -1,16 +1,12 @@
 <html lang="en">
+    <meta charset="UTF-8">
     <head>
         <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
         <script src="van.js"></script>
-        <script src="popup.js"></script>
+        <script src="popup.js" defer></script>
     </head>
     <body>
-        <div class="container">
-            <h1>Twitch Points Extension</h1>
-            <h4>With &#128151; to Hania</h4>
-            <div id="result"></div>
-            <table class="points-values"></table>
-        </div>
+        <div></div>
     </body>
 </html>
