--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -3,8 +3,9 @@
     <head>
         <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
-        <script src="van.js"></script>
-        <script src="popup.js" defer></script>
+        <script src="lib/van.js"></script>
+        <script src="lib/van-x.js"></script>
+        <script src="twitch-points-extension-ui.js" defer></script>
     </head>
     <body>
         <div></div>
