--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -3,6 +3,7 @@
     <head>
         <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
+        <link rel="stylesheet" type="text/css" href="fonts/css/all.css" />
         <script src="lib/van.js"></script>
         <script src="lib/van-x.js"></script>
         <script src="twitch-points-extension-ui.js" defer></script>
