--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
     <head>
+        <meta charset="UTF-8">
         <title>Twitch Points Extension</title>
         <link rel="stylesheet" type="text/css" href="twitch-points-extension.css" />
         <link rel="stylesheet" type="text/css" href="fonts/css/all.css" />
