--- a/src/twitch-points-extension.html
+++ b/src/twitch-points-extension.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="fonts/css/all.css" />
         <script src="lib/van.js"></script>
         <script src="lib/van-x.js"></script>
-        <script src="twitch-points-extension-ui.js" defer></script>
+        <script src="twitch-points-extension-ui.js" type="module" defer></script>
     </head>
     <body>
     </body>
